Fix width of row to fit on small screens

--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -8,6 +8,11 @@ body {
     height: 10rem;
 }
 
+.row {
+    width: 99.5%;
+    margin-left: auto;
+    margin-right: auto;
+}
 .rounded-circle {
     border-radius: 50% !important;
 }
